# fastapi_temp

./: .bandit  .env  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  Makefile.pipeline  Pipfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
server/: alembic.ini  main.py
server/api/: router.py
server/api/v1/: __init__.py  health_check.py  router.py
server/core/: base_model.py  error_handlers.py  settings.py
server/enums/: base_enum.py  status_enum.py
server/migrations/: env.py
server/mixins/: crud.py
server/models/: __init__.py  models.py
server/schemas/: status_schema.py
