[tool.poetry]
name = "pg-back"
version = "1.0.0-dev"
description = ""
authors = ["Golance"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.2"
alembic = "^1.7.5"
python-dotenv = "^0.19.2"
PyJWT = "^2.3.0"
localstack-client = "^1.28"
pandas = "^1.3.5"
pandas-schema = "^0.3.5"
python-multipart = "^0.0.5"
httpx = "^0.21.1"
requests = "^2.25.0"
aiodynamo = { version = "^21.12", extras = ["httpx"] }
pytest-sftpserver = "^1.3.0"
respx = "^0.19.1"
passlib = ">=1.7.4"
pysftp = "0.2.9"
paramiko = "^2.9.2"
loguru = "^0.6.0"
colorama = "^0.4.4"
asyncio = "^3.4.3"
Jinja2 = "^3.0.3"
fastapi-mail = ">=0.4.1"
fastapi-pagination = "^0.9.1"
Faker = "^13.3.2"
sentry-sdk = "^1.5.8"
pytest-order = "^1.0.1"
black = "22.3.0"
gunicorn = "^20.1.0"
gevent = "^21.12.0"
O365 = "^2.0.18"
pytest-lazy-fixture = "^0.6.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
bandit = "^1.7.1"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
freezegun = "^1.1.0"
asynctest = "^0.13.0"
asyncmock = "^0.4.2"
pytest-mock = "^3.6.1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pip-cache
  | \.poetry
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''
